Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17627

qnetworksession.h Q_DECLARE_METATYPE breaks building QtMobility QtBearer depening applications

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 4.7.3
    • 4.7.2
    • None
    • s60 3.x, 5.x and symbian^3
    • f86e014bb6f2754bfed33106021a809ca8c2ce73

    Description

      There is an addition to the header qnetworksession.h for metatype declarations.

      Q_DECLARE_METATYPE(QNetworkSession::State)
      Q_DECLARE_METATYPE(QNetworkSession::SessionError)

      The declarations do not resolve correctly when QT_MOBILITY_BEARER is defined, because QtMobility classes have default namespace set.

      Suggested solution is either flag out the namespace declaration from the QtMobility path of the header or do separate declarations for both. The latter would mean that update would be needed to QtMobility QtBearer header as well to keep the header content align.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cristiano cristiano di flora
            kalle_lehtonen Kalle Lehtonen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes