Fix QTBUG-17627: build break in mobility bearer applications

Task-Number: QTBUG-17627
(cherry picked from commit f86e014bb6f2754bfed33106021a809ca8c2ce73)