src/network/bearer/qnetworksession.h
@@ -141,12 +141,11 @@ private:
 
 #ifndef QT_MOBILITY_BEARER
 QT_END_NAMESPACE
+Q_DECLARE_METATYPE(QNetworkSession::State)
+Q_DECLARE_METATYPE(QNetworkSession::SessionError)
 #else
 QTM_END_NAMESPACE
 #endif
-
-Q_DECLARE_METATYPE(QNetworkSession::State)
-Q_DECLARE_METATYPE(QNetworkSession::SessionError)
 
 QT_END_HEADER
 
